<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal"
    android:weightSum="1">

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.4"
        android:background="@drawable/custom_dialog2_bg">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/dialogTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_find_out_new_verson" />

        <ScrollView
            android:id="@+id/scorllview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:scrollbars="none">

            <RelativeLayout
                android:id="@+id/layContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:paddingRight="30dp"
                    android:text="@string/version_title"
                    android:textColor="@color/dialog_text_color2"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tvApkSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvVersion"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/file_size_title"
                    android:textColor="@color/dialog_text_color2"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvUpdateContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvApkSize"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:scrollbars="vertical"
                    android:text="@string/download_title"
                    android:textColor="@color/dialog_text_color2"
                    android:textSize="15sp" />

                <ProgressBar
                    android:id="@+id/prgRate"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvUpdateContent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:max="100"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:progressDrawable="@drawable/progress_bar" />

                <TextView
                    android:id="@+id/tvRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvUpdateContent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:text="下载..."
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="normal" />
            </RelativeLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scorllview"
            android:layout_marginTop="15dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:paddingBottom="10dp">

            <LinearLayout
                android:id="@+id/system_pop_ll_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_green"
                    android:focusable="true"
                    android:paddingBottom="5dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/update_Cancel"
                    android:textColor="#603c05"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/system_pop_ll_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/btnConfir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_green"
                    android:focusable="true"
                    android:paddingBottom="5dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/update_Confir"
                    android:textColor="#08620e"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>